--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Build domains_all, ipsum, XRay and Sing-Box Files
 on:
   workflow_dispatch: # Allows manual trigger of the workflow
   schedule:
-    - cron: '0 0 */3 * *' # Runs every 3rd day at midnight UTC
+    - cron: '0 0 * * *' # Runs every 3rd day at midnight UTC
 
 jobs:
   run-python-scripts:
@@ -172,9 +172,7 @@ jobs:
           ./src/sing-box-files/refilter/ruleset-ip-refilter_ipsum.srs \
           ./src/sing-box-files/refilter/ruleset-ip-refilter_ipsum.json \
           --title "$RELEASE_NAME" \
-          --notes "This is the automatic $RELEASE_NAME creation." \
-          --draft \
-          --prerelease
+          --notes "This is the automatic $RELEASE_NAME creation." 
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
